# secure-password-generator

./: .bandit  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  index.md
src/passwordgen/: __init__.py  audit.py  cli.py  crypto.py  entropy.py  logging_secure.py  passphrase.py  password.py  vault.py
tests/: test_audit.py  test_cli.py  test_crypto.py  test_entropy.py  test_passphrase.py  test_password.py  test_vault.py
wordlists/: README.md  eff_large_wordlist.txt
